# Python_for_Data_Science

Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex03/: NULL_not_found.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex08/: tester.py
Python-0-Starting/ex09/: README.md  pyproject.toml
Python-0-Starting/ex09/ft_package/: __init__.py  functions.py
Python-0-Starting/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Python-1-Array/ex00/: give_bmi.py  tester.py
Python-1-Array/ex01/: array2D.py  tester.py
Python-1-Array/ex02/: load_image.py  tester.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-1-Array/ex04/: load_image.py  rotate.py
Python-1-Array/ex05/: load_image.py  pimp_image.py  tester.py
Python-2-DataTable/ex00/: load_csv.py  tester.py
Python-2-DataTable/ex01/: aff_life.py
Python-2-DataTable/ex02/: add_pop.py
Python-2-DataTable/ex03/: projection_life.py
Python-3-OOP/: README.md
Python-3-OOP/ex00/: tester.py
Python-3-OOP/ex01/: tester.py
Python-3-OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
Python-3-OOP/ex03/: ft_calculator.py  tester.py
Python-3-OOP/ex04/: ft_calculator.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex05/: buildings.py
ex06/: filterstring.py
ex07/: sos.py
ex08/: Loading.py
ex09/: LICENSE
